Cleaning unused elements

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
       <title>Skeletonic</title>
 
-      <!-- Link to CSS -->
-      <link rel="stylesheet" type="text/css" href="./dist/skeletonic.css" />
+      <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min.css" />
 
     </head>
 
