--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="💀 Skeletonic is a dead on, lightweight, responsive and modern CSS framework">
+      <meta name="description" content="Skeletonic | Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.">
       <meta name="author" content="Reedia Limited">
 
       <title>Skeletonic</title>
@@ -17,9 +17,10 @@
 
         <section class="grid-flex">
           <row class="flex-1">
-                <h1>💀</h1>
-                <h2>Skeletonic</h2>
-                <p><a href="">Skeletonic</a> is a dead on, lightweight, responsive and modern CSS framework</p>
+                <a href="https://skeletonic.io/"><img src="images/logo.png" class="logo"></a>
+                <h1>Skeletonic</h1>
+                <p>Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.</p>
+                <p>Designed to fit your web life.</p>
                 <p>V1.0.0</p>
           </row>
         </section>
