--- a/index.html
+++ b/index.html
@@ -1,81 +1,80 @@
 <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Skeletonic | Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.">
-      <meta name="author" content="Reedia Limited">
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Skeletonic | Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.">
+  <meta name="author" content="Reedia Limited">
 
-      <title>Skeletonic</title>
+  <title>Skeletonic</title>
 
-      <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min.css" />
+  <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min.css" />
 
-    </head>
+</head>
 
-    <body>
-      <main class="container center text-center">
+<body>
+  <main class="container center text-center">
+    <section class="grid-flex">
+      <row class="flex-1">
+        <a href="https://skeletonic.io/"><img src="images/logo.png" /></a>
+        <h1>Skeletonic</h1>
+        <p>Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.</p>
+        <p>Designed to fit your web life.</p>
+        <p>V1.0.0</p>
+      </row>
+    </section>
 
-        <section class="grid-flex">
-          <row class="flex-1">
-                <a href="https://skeletonic.io/"><img src="images/logo.png" class="logo"></a>
-                <h1>Skeletonic</h1>
-                <p>Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.</p>
-                <p>Designed to fit your web life.</p>
-                <p>V1.0.0</p>
-          </row>
-        </section>
+    <section class="grid-flex">
+      <row class="flex-1">
+        <h3>Dead on</h3>
+        <p>All you have to do is drop Skeletonic into your project, and everything will be styled automatically. There is a minimal amount of classes to learn.</p>
+      </row>
+      <row class="flex-1">
+        <h3>Lightweight</h3>
+        <p>Skeletonic comes packed with features, including styling for most elements, a grid, and some components, all in just <strong>5kb.</strong></p>
+      </row>
+      <row class="flex-1">
+        <h3>Responsive</h3>
+        <p>The styles that come with Skeletonic are clean and modern, dropping it into your project will give you a headstart in design.</p>
+      </row>
+    </section>
 
-        <section class="grid-flex">
-          <row class="flex-1">
-            <h3>Dead on</h3>
-            <p>All you have to do is drop Skeletonic into your project, and everything will be styled automatically. There is a minimal amount of classes to learn.</p>
-          </row>
-          <row class="flex-1">
-            <h3>Lightweight</h3>
-            <p>Skeletonic comes packed with features, including styling for most elements, a grid, and some components, all in just <strong>5kb.</strong></p>
-          </row>
-          <row class="flex-1">
-            <h3>Responsive</h3>
-            <p>The styles that come with Skeletonic are clean and modern, dropping it into your project will give you a headstart in design.</p>
-          </row>
-          </section>
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+        <h3>Responsive</h3>
+        <p>Simple, responsive grid that collapses at small viewport widths.</p>
+      </row>
+    </section>
 
-          <section class="grid-flex text-left">
-            <row class="flex-1">
-              <h3>Responsive</h3>
-              <p>Simple, responsive grid that collapses at small viewport widths.</p>
-            </row>
-          </section>
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+        <h3>Typography</h3>
+        <p>Carefully considered, readable typography.</p>
+      </row>
+    </section>
 
-          <section class="grid-flex text-left">
-            <row class="flex-1">
-              <h3>Typography</h3>
-              <p>Carefully considered, readable typography.</p>
-            </row>
-          </section>
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+      </row>
+      <row class="flex-1">
+        <p>Body copy set at 1.125rem (18px) with a 1.5 line-height and a high contrast type scale, Skull’s typography sets the pace for elegant information hierarchy and lends itself to effortless readability.</p>
+        <p>In combination with typography utilities, sites built with Skull are quick to tweak and customize to fit any design – whether it’s a blog, documentation, a personal portfolio, or a cat gif portal.</p>
+      </row>
+    </section>
 
-          <section class="grid-flex text-left">
-            <row class="flex-1">
-              <h1>Heading 1</h1>
-              <h2>Heading 2</h2>
-              <h3>Heading 3</h3>
-              <h4>Heading 4</h4>
-              <h5>Heading 5</h5>
-            </row>
-            <row class="flex-1">
-              <p>Body copy set at 1.125rem (18px) with a 1.5 line-height and a high contrast type scale, Skull’s typography sets the pace for elegant information hierarchy and lends itself to effortless readability.</p>
-              <p>In combination with typography utilities, sites built with Skull are quick to tweak and customize to fit any design – whether it’s a blog, documentation, a personal portfolio, or a cat gif portal.</p>
-            </row>
-          </section>
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+        <h3>Responsive</h3>
+        <p>Simple, responsive grid that collapses at small viewport widths.</p>
+      </row>
+    </section>
+  </main>
 
-          <section class="grid-flex text-left">
-            <row class="flex-1">
-              <h3>Responsive</h3>
-              <p>Simple, responsive grid that collapses at small viewport widths.</p>
-            </row>
-          </section>
-      </main>
-
-      <footer class="text-center">Copyright &#169; Reedia Limited 2015-2018. All rights reserved.</footer>
-  </body>
+  <footer class="text-center">Copyright &#169; Reedia Limited 2015-2018. All rights reserved.</footer>
+</body>
 </html>
