Updated HTML elements

--- a/index.html
+++ b/index.html
@@ -50,29 +50,42 @@
       <row class="flex-1">
         <h3>Typography</h3>
         <p>Carefully considered, readable typography.</p>
-      </row>
-    </section>
-
-    <section class="grid-flex text-left">
-      <row class="flex-1">
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
         <h4>Heading 4</h4>
         <h5>Heading 5</h5>
-      </row>
-      <row class="flex-1">
-        <p>Body copy set at 1.125rem (18px) with a 1.5 line-height and a high contrast type scale, Skull’s typography sets the pace for elegant information hierarchy and lends itself to effortless readability.</p>
-        <p>In combination with typography utilities, sites built with Skull are quick to tweak and customize to fit any design – whether it’s a blog, documentation, a personal portfolio, or a cat gif portal.</p>
+        <hr />
       </row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Responsive</h3>
-        <p>Simple, responsive grid that collapses at small viewport widths.</p>
+        <h3>Typography</h3>
+        <p>Carefully considered, readable typography.</p>
+        <p>Paragraph lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <hr />
       </row>
     </section>
+
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+        <h3>Links</h3>
+        <p>Carefully considered, readable typography.</p>
+        <a href="https://skeletonic.io">https://skeletonic.io</a>
+        <hr />
+      </row>
+    </section>
+
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+        <h3>Button</h3>
+        <p>Carefully considered, readable typography.</p>
+        <button>Button</button>
+        <hr />
+      </row>
+    </section>
+
   </main>
 
   <footer class="text-center">Copyright &#169; Reedia Limited 2015-2018. All rights reserved.</footer>
