Updated styles and HTML

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
       <row class="flex-1">
         <h3>Typography</h3>
         <p>Carefully considered, readable typography.</p>
-        <p>Paragraph lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <hr />
       </row>
     </section>
@@ -71,7 +70,6 @@
     <section class="grid-flex text-left">
       <row class="flex-1">
         <h3>Links</h3>
-        <p>Carefully considered, readable typography.</p>
         <a href="https://skeletonic.io">https://skeletonic.io</a>
         <hr />
       </row>
@@ -80,8 +78,20 @@
     <section class="grid-flex text-left">
       <row class="flex-1">
         <h3>Button</h3>
-        <p>Carefully considered, readable typography.</p>
         <button>Button</button>
+        <hr />
+      </row>
+    </section>
+
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+        <h3>Code</h3>
+        <p><code>print("Hello Skeletonic")</code></p>
+        <p><pre>import "skeletonic"
+
+void main() {
+    print("Hello Skeletonic")
+}</pre></p>
         <hr />
       </row>
     </section>
