--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
 
     <section class="grid-flex text-left">
       <row class="flex-1">
+        <h3>Textarea</h3>
+        <textarea></textarea>
+        <hr />
+      </row>
+    </section>
+
+
+    <section class="grid-flex text-left">
+      <row class="flex-1">
         <h3>Code</h3>
         <p><code>print("Hello Skeletonic")</code></p>
         <p><pre>import "skeletonic"
