Updated CSS and added CSS grid

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Reedia Limited">
 
   <title>Skeletonic</title>
-
+  <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic-grid.css" />  
   <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min.css" />
 
 </head>
