Added new elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Reedia Limited">
 
   <title>Skeletonic</title>
-  <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic-pattern.min.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic-pattern.min.css" /> -->
   <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min.css" />
 
 </head>
@@ -85,8 +85,69 @@
 
     <section class="grid-flex text-left">
       <row class="flex-1">
+        <h3>Input</h3>
+        <input type="text" placeholder="Text..." />
+        <hr />
+      </row>
+    </section>
+
+    <section class="grid-flex text-left">
+      <row class="flex-1">
         <h3>Textarea</h3>
         <textarea></textarea>
+        <hr />
+      </row>
+    </section>
+
+    <section class="grid-flex text-left">
+      <row class="flex-1">
+    <h3>Select</h3>
+        <select>
+          <option value="">Choose a skeletonic item...</option>
+          <optgroup label="Original CSS">
+            <option value="">skeletonic.css</option>
+            <option value="">skeletonic-pattern.css</option>
+          </optgroup>
+          <optgroup label="Minified CSS">
+            <option value="">skeletonic.min.css</option>
+            <option value="">skeletonic-pattern.min.css</option>
+          </optgroup>
+        </select>
+        <hr />
+      </row>
+    </section>
+
+        <section class="grid-flex text-left">
+          <row class="flex-1">
+        <h3>Separator</h3>
+        <hr />
+      </row>
+    </section>
+
+        <section class="grid-flex text-left">
+          <row class="flex-1">
+        <h3>Table</h3>
+        <table>
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Type</th>
+              <th>Source</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Original CSS</td>
+              <td>skeletonic.css</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Minified CSS</td>
+              <td>skeletonic.min.css</td>
+            </tr>
+          </tbody>
+        </table>
         <hr />
       </row>
     </section>
