--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
         <h3>Heading 3</h3>
         <h4>Heading 4</h4>
         <h5>Heading 5</h5>
-        <hr />
       </row>
     </section>
 
@@ -63,7 +62,6 @@
       <row class="flex-1">
         <h3>Typography</h3>
         <p>Carefully considered, readable typography.</p>
-        <hr />
       </row>
     </section>
 
@@ -71,7 +69,6 @@
       <row class="flex-1">
         <h3>Links</h3>
         <a href="https://skeletonic.io">https://skeletonic.io</a>
-        <hr />
       </row>
     </section>
 
@@ -79,7 +76,6 @@
       <row class="flex-1">
         <h3>Button</h3>
         <button>Button</button>
-        <hr />
       </row>
     </section>
 
@@ -87,7 +83,6 @@
       <row class="flex-1">
         <h3>Input</h3>
         <input type="text" placeholder="Text..." />
-        <hr />
       </row>
     </section>
 
@@ -95,7 +90,6 @@
       <row class="flex-1">
         <h3>Textarea</h3>
         <textarea></textarea>
-        <hr />
       </row>
     </section>
 
@@ -103,7 +97,7 @@
       <row class="flex-1">
     <h3>Select</h3>
         <select>
-          <option value="">Choose a skeletonic item...</option>
+          <option value="">Choose an item...</option>
           <optgroup label="Original CSS">
             <option value="">skeletonic.css</option>
             <option value="">skeletonic-pattern.css</option>
@@ -113,45 +107,42 @@
             <option value="">skeletonic-pattern.min.css</option>
           </optgroup>
         </select>
-        <hr />
       </row>
     </section>
 
-        <section class="grid-flex text-left">
-          <row class="flex-1">
+    <section class="grid-flex text-left">
+      <row class="flex-1">
         <h3>Separator</h3>
         <hr />
       </row>
     </section>
 
-        <section class="grid-flex text-left">
-          <row class="flex-1">
+    <section class="grid-flex text-left">
+      <row class="flex-1">
         <h3>Table</h3>
-        <table>
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Type</th>
-              <th>Source</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Original CSS</td>
-              <td>skeletonic.css</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Minified CSS</td>
-              <td>skeletonic.min.css</td>
-            </tr>
-          </tbody>
-        </table>
-        <hr />
+          <table>
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Type</th>
+                <th>Source</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Original CSS</td>
+                <td>skeletonic.css</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Minified CSS</td>
+                <td>skeletonic.min.css</td>
+              </tr>
+            </tbody>
+          </table>        
       </row>
     </section>
-
 
     <section class="grid-flex text-left">
       <row class="flex-1">
@@ -162,7 +153,6 @@
 void main() {
     print("Hello Skeletonic")
 }</pre></p>
-        <hr />
       </row>
     </section>
 
