--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </row>
       <row class="flex-1">
         <h3>Lightweight</h3>
-        <p>Skeletonic comes packed with features, including styling for most elements, a grid, and some components, all in just <strong>5kb.</strong></p>
+        <p>Skeletonic comes packed with features, including styling for most elements, all in just <strong>5kb.</strong></p>
       </row>
       <row class="flex-1">
         <h3>Responsive</h3>
@@ -80,7 +80,7 @@
     <section class="grid-flex text-left">
       <row class="flex-1">
         <h3>Button</h3>
-        <button>Button</button>
+        <p><a href="https://skeletonic.io" target="_blank" class="button">Download Skeletonic.css</a></p>
       </row>
     </section>
 
