Updated README, images and HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Skeletonic | Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.">
+  <meta name="description" content="Skeletonic | Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.">
   <meta name="author" content="Reedia Limited">
 
   <title>Skeletonic</title>
@@ -17,38 +17,87 @@
     <section class="grid-flex">
       <row class="flex-1">
         <a href="https://skeletonic.io/"><img src="images/logo.png" /></a>
-        <h1>Skeletonic</h1>
-        <p>Meet the sleek, lightweight, intuitive and ultra-responsive CSS framework.</p>
-        <p>Designed to fit your web life.</p>
-        <p>V1.0.0</p>
+        <h1>Introducing Skeletonic</h1>
+        <p>Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.</p>
+        <p>Simply designed to fit your web life.</p>
+        <p>v0.0.1</p>
+        <p><a href="https://github.com/reedia/skeletonic/archive/v0.0.1.zip" class="button" style="text-transform:uppercase">Download Skeletonic</a></p>
       </row>
     </section>
 
     <section class="grid-flex">
       <row class="flex-1">
         <h3>Dead on</h3>
+        <img class="value-img" src="images/skull.png" alt="" style="max-height:100px;" />
         <p>All you have to do is drop Skeletonic into your project, and everything will be styled automatically. There is a minimal amount of classes to learn.</p>
       </row>
       <row class="flex-1">
         <h3>Lightweight</h3>
+        <img class="value-img" src="images/lightweight.png" alt="" style="max-height:100px;" />
         <p>Skeletonic comes packed with features, including styling for most elements, all in just <strong>5kb.</strong></p>
       </row>
       <row class="flex-1">
         <h3>Responsive</h3>
+        <img class="value-img" src="images/responsive.png" alt="" style="max-height:100px;" />
         <p>The styles that come with Skeletonic are clean and modern, dropping it into your project will give you a headstart in design.</p>
       </row>
     </section>
-
+    <hr />
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Grid</h3>
-        <p>Simple, responsive grid that collapses at small viewport widths.</p>
-      </row>
+        <h3 style="text-transform:uppercase">The Grid</h3>
+        <p>Skeletonic has a simple, responsive grid that collapses at small viewport. It is based on a 10-columns fluid grid and a maximum <wid></wid>th of 940px.</p>
+    </section>
+
+    <section class="grid-flex">
+        <row class="flex-1" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-1</p></row>
+        <row class="flex-9" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-9</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-2" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-2</p></row>
+        <row class="flex-8" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-8</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-3" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-3</p></row>
+        <row class="flex-7" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-7</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-4" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-4</p></row>
+        <row class="flex-6" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-6</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-5" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-5</p></row>
+        <row class="flex-5" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-5</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-6" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-6</p></row>
+        <row class="flex-4" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-4</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-7" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-7</p></row>
+        <row class="flex-3" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-3</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-8" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-8</p></row>
+        <row class="flex-2" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-2</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-9" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-9</p></row>
+        <row class="flex-1" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-1</p></row>
+    </section>
+    <section class="grid-flex">
+        <row class="flex-10" style="background-color:#f2f2f2;margin-right:10px;"><p style="margin-bottom:0 !important;">flex-10</p></row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Headings</h3>
+        <h3 style="text-transform:uppercase">Headings</h3>
+      <p>
+        Carefully considered, readable typography that sets at 1rem over a 1.6 line height (24px).
+      </p>
+      </row>
+      <row class="flex-1">
+        <h3 style="text-transform:uppercase">Headings</h3>
         <p>Carefully considered, readable typography.</p>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
@@ -61,9 +110,7 @@
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Typography</h3>
-        <p>Carefully considered, readable typography.</p>
-        <h3>Paragraph</h3>
+        <h3 style="text-transform:uppercase">Paragraph</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor libero, tempor sed ornare vitae, suscipit sed sapien. Curabitur mollis lectus quis gravida pellentesque. Etiam gravida sollicitudin magna, non ultrices tellus vehicula et. Aliquam euismod ante maximus ligula maximus, tristique placerat mi tincidunt. Cras sit amet diam metus. Integer efficitur venenatis condimentum. Aliquam erat volutpat. Praesent eu massa ut augue hendrerit consequat. Aliquam risus justo, sodales sit amet sem eget, tempor malesuada massa. Nullam et nisi pellentesque, blandit arcu non, rhoncus lacus. Duis metus ligula, lacinia lacinia lacus eu, placerat tincidunt nibh. Donec quis urna nec tortor finibus dictum at et ipsum.</p>
 
 <p>Nulla tincidunt vitae massa eu gravida. Pellentesque vulputate quam elementum lorem elementum, in auctor dolor cursus. Fusce hendrerit orci et massa viverra, eget finibus enim facilisis. Sed et molestie ex, vitae dignissim sem. Aenean sit amet imperdiet neque. Vivamus at tristique mi. Fusce quis ligula malesuada, feugiat eros nec, egestas risus. Morbi fringilla, sapien non mollis sodales, nunc felis luctus neque, sit amet ullamcorper quam nibh vitae massa. Vivamus gravida orci in diam tincidunt mollis. Duis at pharetra tellus. Aliquam a vestibulum ex.</p>
@@ -72,35 +119,35 @@
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Links</h3>
+        <h3 style="text-transform:uppercase">Links</h3>
         <a href="https://skeletonic.io">https://skeletonic.io</a>
       </row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Button</h3>
+        <h3 style="text-transform:uppercase">Button</h3>
         <p><a href="https://skeletonic.io" target="_blank" class="button">Download Skeletonic.css</a></p>
       </row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Input</h3>
+        <h3 style="text-transform:uppercase">Input</h3>
         <input type="text" placeholder="Text..." />
       </row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Textarea</h3>
+        <h3 style="text-transform:uppercase">Textarea</h3>
         <textarea></textarea>
       </row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-    <h3>Select</h3>
+    <h3 style="text-transform:uppercase">Select</h3>
         <select>
           <option value="">Choose an item...</option>
           <optgroup label="Original CSS">
@@ -117,14 +164,14 @@
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Divider</h3>
+        <h3 style="text-transform:uppercase">Divider</h3>
         <hr />
       </row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Table</h3>
+        <h3 style="text-transform:uppercase">Table</h3>
       </row>
     </section>
 
@@ -181,7 +228,7 @@
 
     <section class="grid-flex text-left">
       <row class="flex-1">
-        <h3>Code</h3>
+        <h3 style="text-transform:uppercase">Code</h3>
         <p><code>print("Hello Skeletonic")</code></p>
         <p><pre>import "skeletonic"
 
