--- a/index.html
+++ b/index.html
@@ -97,8 +97,6 @@
       </p>
       </row>
       <row class="flex-1">
-        <h3 style="text-transform:uppercase">Headings</h3>
-        <p>Carefully considered, readable typography.</p>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
@@ -111,9 +109,9 @@
     <section class="grid-flex text-left">
       <row class="flex-1">
         <h3 style="text-transform:uppercase">Paragraph</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor libero, tempor sed ornare vitae, suscipit sed sapien. Curabitur mollis lectus quis gravida pellentesque. Etiam gravida sollicitudin magna, non ultrices tellus vehicula et. Aliquam euismod ante maximus ligula maximus, tristique placerat mi tincidunt. Cras sit amet diam metus. Integer efficitur venenatis condimentum. Aliquam erat volutpat. Praesent eu massa ut augue hendrerit consequat. Aliquam risus justo, sodales sit amet sem eget, tempor malesuada massa. Nullam et nisi pellentesque, blandit arcu non, rhoncus lacus. Duis metus ligula, lacinia lacinia lacus eu, placerat tincidunt nibh. Donec quis urna nec tortor finibus dictum at et ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor libero, tempor sed ornare vitae, suscipit sed sapien. Curabitur mollis lectus quis gravida pellentesque. Etiam gravida sollicitudin magna, non ultrices tellus vehicula et. Aliquam euismod ante maximus ligula maximus, tristique placerat mi tincidunt. Cras sit amet diam metus. Integer efficitur venenatis condimentum. Aliquam erat volutpat. Praesent eu massa ut augue hendrerit consequat. Aliquam risus justo, sodales sit amet sem eget, tempor malesuada massa. Nullam et nisi pellentesque, blandit arcu non, rhoncus lacus. Duis metus ligula, lacinia lacinia lacus eu, placerat tincidunt nibh. Donec quis urna nec tortor finibus dictum at et ipsum.</p>
 
-<p>Nulla tincidunt vitae massa eu gravida. Pellentesque vulputate quam elementum lorem elementum, in auctor dolor cursus. Fusce hendrerit orci et massa viverra, eget finibus enim facilisis. Sed et molestie ex, vitae dignissim sem. Aenean sit amet imperdiet neque. Vivamus at tristique mi. Fusce quis ligula malesuada, feugiat eros nec, egestas risus. Morbi fringilla, sapien non mollis sodales, nunc felis luctus neque, sit amet ullamcorper quam nibh vitae massa. Vivamus gravida orci in diam tincidunt mollis. Duis at pharetra tellus. Aliquam a vestibulum ex.</p>
+        <p>Nulla tincidunt vitae massa eu gravida. Pellentesque vulputate quam elementum lorem elementum, in auctor dolor cursus. Fusce hendrerit orci et massa viverra, eget finibus enim facilisis. Sed et molestie ex, vitae dignissim sem. Aenean sit amet imperdiet neque. Vivamus at tristique mi. Fusce quis ligula malesuada, feugiat eros nec, egestas risus. Morbi fringilla, sapien non mollis sodales, nunc felis luctus neque, sit amet ullamcorper quam nibh vitae massa. Vivamus gravida orci in diam tincidunt mollis. Duis at pharetra tellus. Aliquam a vestibulum ex.</p>
       </row>
     </section>
 
@@ -240,6 +238,8 @@ void main() {
 
   </main>
 
-  <footer class="text-center">Copyright &#169; Reedia Limited 2015-2018. All rights reserved.</footer>
+  <footer class="text-center">
+    <p>Copyright &#169; Reedia Limited 2015-2018. All rights reserved.</p>
+  </footer>
 </body>
 </html>
