--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="container center text-center">
     <section class="grid-flex">
       <row class="flex-1">
-        <a href="https://skeletonic.io/"><img src="images/logo.png" /></a>
+        <a href="http://skeletonic.io/"><img src="images/logo.png" /></a>
         <h1>Introducing Skeletonic</h1>
         <p>Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.</p>
         <p>Simply designed to fit your web life.</p>
@@ -118,14 +118,14 @@
     <section class="grid-flex text-left">
       <row class="flex-1">
         <h3 style="text-transform:uppercase">Links</h3>
-        <a href="https://skeletonic.io">https://skeletonic.io</a>
+        <a href="http://skeletonic.io">http://skeletonic.io</a>
       </row>
     </section>
 
     <section class="grid-flex text-left">
       <row class="flex-1">
         <h3 style="text-transform:uppercase">Button</h3>
-        <p><a href="https://skeletonic.io" target="_blank" class="button">Download Skeletonic.css</a></p>
+        <p><a href="http://skeletonic.io" target="_blank" class="button">Download Skeletonic.css</a></p>
       </row>
     </section>
 
