Minor updates on v1.0.28

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Skeletonic | Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.">
+  <meta name="keywords" content="skeletonic,skeletonic.css,CSS,lightweight,dead on,responsive,framework,semantic,mobile-first,modern,style-agnostic,front-end,frontend,grid system,typography">
+  <meta name="description" content="Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.">
   <meta name="author" content="Reedia Limited">
 
   <title>Skeletonic</title>
@@ -20,8 +21,8 @@
         <h1>Introducing Skeletonic</h1>
         <p>Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.</p>
         <p>Simply designed to fit your web life.</p>
-        <p>v0.0.1</p>
-        <p><a href="https://github.com/reedia/skeletonic/archive/v0.0.1.zip" class="button" style="text-transform:uppercase">Download Skeletonic</a></p>
+        <p>Latest release</p>
+        <p><a href="https://github.com/reedia/skeletonic/archive/v1.0.28.zip" class="button" style="text-transform:uppercase">Download Skeletonic</a></p>
       </row>
     </section>
 
