--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="skeletonic,skeletonic.css,CSS,lightweight,dead on,responsive,framework,semantic,mobile-first,modern,style-agnostic,front-end,frontend,grid system,typography">
+  <meta name="keywords" content="skeletonic,skeletonic-1.0.29.css,CSS,lightweight,dead on,responsive,framework,semantic,mobile-first,modern,style-agnostic,front-end,frontend,grid system,typography">
   <meta name="description" content="Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.">
   <meta name="author" content="Reedia Limited">
 
   <title>Skeletonic</title>
-  <!-- <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic-pattern.min.css" /> -->
-  <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min.css" />
+
+  <!-- <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic-pattern.min-1.0.29.css" /> -->
+
+  <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min-1.0.29.css" />
 
 </head>
 
@@ -17,12 +19,12 @@
   <main class="container center text-center">
     <section class="grid-flex">
       <row class="flex-1">
-        <a href="http://skeletonic.io/"><img src="images/logo.png" /></a>
+        <a href="http://skeletonic.io/"><img src="images/logo.png" alt="Skeletonic" /></a>
         <h1>Introducing Skeletonic</h1>
         <p>Skeletonic is a lightweight, intuitive and ultra-responsive CSS framework to speed up your Digital and Mobile Web development needs.</p>
         <p>Simply designed to fit your web life.</p>
-        <p>Latest release</p>
-        <p><a href="https://github.com/reedia/skeletonic/archive/v1.0.28.zip" class="button" style="text-transform:uppercase">Download Skeletonic</a></p>
+        <p><em>Version: 1.0.29</em></p>
+        <p><a href="https://github.com/reedia/skeletonic/archive/v1.0.29.zip" class="button" style="text-transform:uppercase">Download Skeletonic CSS</a></p>
       </row>
     </section>
 
@@ -126,7 +128,7 @@
     <section class="grid-flex text-left">
       <row class="flex-1">
         <h3 style="text-transform:uppercase">Button</h3>
-        <p><a href="http://skeletonic.io" target="_blank" class="button">Download Skeletonic.css</a></p>
+        <p><a href="https://github.com/reedia/skeletonic/archive/v1.0.29.zip" target="_blank" class="button">Download skeletonic-1.0.29.css</a></p>
       </row>
     </section>
 
@@ -150,11 +152,11 @@
         <select>
           <option value="">Choose an item...</option>
           <optgroup label="Original CSS">
-            <option value="">skeletonic.css</option>
+            <option value="">skeletonic-1.0.29.css</option>
             <option value="">skeletonic-pattern.css</option>
           </optgroup>
           <optgroup label="Minified CSS">
-            <option value="">skeletonic.min.css</option>
+            <option value="">skeletonic.min-1.0.29.css</option>
             <option value="">skeletonic-pattern.min.css</option>
           </optgroup>
         </select>
@@ -188,12 +190,12 @@
             <tr>
               <td>1</td>
               <td>Original CSS</td>
-              <td>skeletonic.css</td>
+              <td>skeletonic-1.0.29.css</td>
             </tr>
             <tr>
               <td>2</td>
               <td>Minified CSS</td>
-              <td>skeletonic.min.css</td>
+              <td>skeletonic.min-1.0.29.css</td>
             </tr>
           </tbody>
         </table>
@@ -212,12 +214,12 @@
               &lt;tr&gt;
                 &lt;td&gt;1&lt;/td&gt;
                 &lt;td&gt;Original CSS&lt;/td&gt;
-                &lt;td&gt;skeletonic.css&lt;/td&gt;
+                &lt;td&gt;skeletonic-1.0.29.css&lt;/td&gt;
               &lt;/tr&gt;
               &lt;tr&gt;
                 &lt;td&gt;2&lt;/td&gt;
                 &lt;td&gt;Minified CSS&lt;/td&gt;
-                &lt;td&gt;skeletonic.min.css&lt;/td&gt;
+                &lt;td&gt;skeletonic.min-1.0.29.css&lt;/td&gt;
               &lt;/tr&gt;
             &lt;/tbody&gt;
           &lt;/table&gt;
