--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic-pattern.min-1.0.29.css" /> -->
 
-  <link rel="stylesheet" type="text/css" href="./stylesheets/skeletonic.min-1.0.29.css" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/skeletonic" />
 
 </head>
 
